Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-759

Query cannot be terminated by pg_cancel_backend or pg_terminate_backend

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 2.0.0.0-incubating
    • None
    • None

    Description

      Query cannot be terminated by pg_cancel_backend or pg_terminate_backend.
      Reproduce procedure
      1. create a pipe
      [gpadmin@mdw tmp]$ mkfifo /tmp/test.dat
      2.create test table and run copy command.
      gpadmin=# create table public.test(id int) distributed randomly;
      CREATE TABLE
      Time: 306.431 ms
      gpadmin=# copy public.test to '/tmp/test.dat';
      3. open a new psql session. try to terminate this session but fails.

      Time: 2.327 ms
      gpadmin=# select pg_cancel_backend(19210);
      pg_cancel_backend
      -------------------
      t
      (1 row)

      Time: 0.452 ms
      gpadmin=# select pg_terminate_backend(19210);
      pg_terminate_backend
      ----------------------
      t
      (1 row)

      Time: 0.368 ms
      gpadmin=# select * from pg_stat_activity ;

      Attachments

        Issue Links

          Activity

            People

              wlin Wen Lin
              wlin Wen Lin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: