HAWQ-759. Fix query cannot be terminated by pg_cancel_backend or pg_terminate_backend